--- a/public/offline.html
+++ b/public/offline.html
@@ -1,54 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Offline - CreditWise AI</title>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background-color: #f5f7fa;
-            color: #2b2d42;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            text-align: center;
-            flex-direction: column;
-        }
-        .container {
-            max-width: 400px;
-            padding: 2rem;
-        }
-        .icon {
-            width: 80px;
-            height: 80px;
-            margin-bottom: 1.5rem;
-            color: #f94144;
-        }
-        h1 {
-            font-size: 2rem;
-            font-weight: 700;
-            margin: 0 0 0.5rem 0;
-        }
-        p {
-            font-size: 1rem;
-            color: #8d99ae;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CreditWise AI - Offline</title>
+  <style>
+    body { 
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
+      text-align: center; 
+      padding: 40px 20px;
+      background-color: #f8f9fa;
+      color: #343a40;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+        max-width: 600px;
+    }
+    h1 { 
+      font-size: 24px;
+      color: #3F51B5; 
+    }
+    p {
+      font-size: 16px;
+      line-height: 1.6;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M5 12.55a11 11 0 0 1 14.08 0"/>
-            <path d="M1.42 9a16 16 0 0 1 21.16 0"/>
-            <path d="M8.53 16.11a6 6 0 0 1 6.95 0"/>
-            <line x1="4" x2="4" y1="20" y2="20"/>
-            <line x1="1" x2="23" y1="1" y2="23"/>
-        </svg>
-        <h1>You're Offline</h1>
-        <p>It looks like you've lost your connection. Please check it and try again.</p>
-    </div>
+  <div class="container">
+    <h1>You're Currently Offline</h1>
+    <p>CreditWise AI needs an internet connection to provide real-time analysis.</p>
+    <p>Please check your connection. Some previously cached content may be available, but most features will be disabled until you reconnect.</p>
+  </div>
 </body>
 </html>
