--- a/public/offline.html
+++ b/public/offline.html
@@ -1,40 +1,44 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CreditWise AI - Offline</title>
+  <title>Offline | CreditWise AI</title>
   <style>
-    body { 
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; 
-      text-align: center; 
-      padding: 40px 20px;
-      background-color: #f8f9fa;
-      color: #343a40;
-      margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
+    :root {
+      --primary: #4361ee;
+      --background: #f5f7fa;
     }
-    .container {
-        max-width: 600px;
+    body {
+      font-family: Arial, sans-serif;
+      background: var(--background);
+      color: #333;
+      text-align: center;
+      padding: 2rem;
     }
-    h1 { 
-      font-size: 24px;
-      color: #3F51B5; 
-    }
-    p {
-      font-size: 16px;
-      line-height: 1.6;
+    h1 { color: var(--primary); }
+    button {
+      background: var(--primary);
+      color: white;
+      border: none;
+      padding: 0.5rem 1rem;
+      border-radius: 4px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>You're Currently Offline</h1>
-    <p>CreditWise AI needs an internet connection to provide real-time analysis.</p>
-    <p>Please check your connection. Some previously cached content may be available, but most features will be disabled until you reconnect.</p>
-  </div>
+  <h1>You're Offline</h1>
+  <p>CreditWise AI requires an internet connection for full functionality.</p>
+  <p>Your pending actions will sync when you reconnect.</p>
+  <button onclick="window.location.reload()">Retry Connection</button>
+  
+  <script>
+    // Check for connection periodically
+    setInterval(() => {
+      fetch('/').then(() => window.location.reload());
+    }, 30000);
+  </script>
 </body>
 </html>
